# deepgrp_reproducibility

./: .gitignore  .gitmodules  Benchmark.ipynb  Evaluation.ipynb  Figures.ipynb  Makefile  README.rst  Training_deepgrp.ipynb  Training_dnabrnn.ipynb  pyproject.toml  repeats.json
data/: .gitignore  Makefile
dfam/: .gitignore  Makefile  dfam_to_repeatmasker.py  filter_hmm.py
models/: dnabrnn_model1.knm  dnabrnn_model2.knm  dnabrnn_model3.knm  dnabrnn_model4.knm  model_171417_19.h5  model_180532_30.h5  model_191559_36.h5  model_20210313062834_28.h5  model_20210313064215_20.h5  model_20210313065308_31.h5  model_20210313070755_15.h5  model_20210313071659_07.h5  model_203723_14.h5  model_211956_08.h5  model_215159_03.h5
repeatmasker/: .gitignore  Makefile  README.txt  create_repeatmasker_lib.py  embl_to_fasta.py  get_results.py  repeatmasker_to_deepgrp.py  run_linux.sh
results/: deepgrp_cpu_results.json  deepgrp_gpu_results.json  deepgrp_results.json  deepgrp_results_hg19complete.json  deepgrp_runningtime.json  dfam_runningtime.csv  dnabrnn_results.json  dnabrnn_results_hg19complete.json  dnabrnn_runningtime.json  repeatmasker_runningtime.csv
